objects/ssot__CourseOfferingRubric__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivityType__c</fullName>
        <label>Activity Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BestOfQuantity__c</fullName>
        <label>Best Of</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CourseOfferingId__c</fullName>
        <label>Course Offering</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Course Offering Rubric Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InstancesQuantity__c</fullName>
        <label>Instances</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WeightingNumber__c</fullName>
        <label>Weighting</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719820262380_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CourseOfferingRubric_CourseOfferingI_rel</label>
        <referenceTo>ssot__CourseOffering__dlm</referenceTo>
        <relationshipLabel>CourseOfferingRubric_CourseOfferingI_rel</relationshipLabel>
        <relationshipName>rel_1719820262380_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>